# graphrag-code

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  ROADMAP.md  dependency_slicer.py
.archon/workflows/: dev-pipeline-diagram.html  dev-pipeline-diagram.md  dev-pipeline.yaml
.claude/: settings.json
.claude/commands/: arch-check.md  blast-radius.md  commit.md  create-pr.md  critique.md  dead-code.md  file-issues.md  graph-refresh.md  graph.md  implement.md  package.md  plan_local.md  preflight.md  research.md  review-pr.md  roadmap.md  sync.md  test.md  trace-endpoint.md  who-owns.md
.claude/plans/: arch-check-ci.plan.md  graph-slash-commands.plan.md  workflow-commands-rewrite.plan.md
.github/workflows/: arch-check.yml  audit-prompt-integrity.yml  release.yml
codegraph/: .env.example  README.md  docker-compose.yml  pyproject.toml  queries.md  requirements.txt
codegraph/codegraph/: __init__.py  analyze.py  arch_check.py  arch_config.py  cache.py  cli.py  clone.py  config.py  doc_parser.py  export.py  framework.py  ignore.py  init.py  loader.py  mcp.py  ownership.py  parser.py  platforms.py  py_parser.py  repl.py  resolver.py  schema.py  semantic_extract.py  transcribe.py  validate.py  watch.py
codegraph/codegraph/templates/: arch-policies.toml  claude-md-snippet.md
codegraph/codegraph/templates/claude/commands/: dead-code.md  graph.md
codegraph/docs/: arch-policies.md  cli.md  init.md  platforms.md  schema.md
codegraph/tests/: test_analyze.py  test_arch_check.py  test_arch_config.py  test_benchmark.py  test_cache.py  test_cli_neo4j_errors.py  test_clone.py  test_doc_parser_markdown.py  test_export.py  test_framework.py  test_ignore.py  test_incremental.py  test_init.py  test_init_integration.py  test_loader_pairing.py  test_loader_partitioning.py  test_mcp.py  test_ownership.py  test_platforms.py  test_py_parser.py  test_py_parser_calls.py  test_py_resolver.py  test_resolver_bugs.py  test_stats.py  test_transcribe.py  test_wipe_scoped.py
codegraph/tests/fixtures/markdown/: concepts.md  decisions.md  mixed-headings.md  no-headings.md  setext.md
